feat(JIRA-23): update product list view, controllers, and routes by category

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -105,6 +105,11 @@ a {
     color: var(--darkgray)!important;
 }
 
+.text--notFound {
+    color:var(--red)!important;
+}
+
+
 .text--medium{
     margin: 0 0 5px;
     font-weight: bold;
