--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -24,13 +24,15 @@
             <div class="col-6 col-lg-2">
                 <h5 class="text-uppercase mb-3">Categorías</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#craneana" class="text-white text-decoration-none">Craneana</a></li>
-                    <li><a href="#auditiva" class="text-white text-decoration-none">Auditiva</a></li>
-                    <li><a href="#respiratoria" class="text-white text-decoration-none">Respiratoria</a></li>
-                    <li><a href="#ocular" class="text-white text-decoration-none">Ocular</a></li>
-                    <li><a href="#facial" class="text-white text-decoration-none">Facial</a></li>
-                    <li><a href="#facial" class="text-white text-decoration-none">Manos</a></li>
-                    <li><a href="#facial" class="text-white text-decoration-none">Pies</a></li>
+                    <li><a href="/productos/categoria/1" class="text-white text-decoration-none">Craneana</a></li>
+                    <li><a href="/productos/categoria/2" class="text-white text-decoration-none">Auditiva</a></li>
+                    <li><a href="/productos/categoria/3" class="text-white text-decoration-none">Respiratoria</a></li>
+                    <li><a href="/productos/categoria/4" class="text-white text-decoration-none">Ocular</a></li>
+                    <li><a href="/productos/categoria/5" class="text-white text-decoration-none">Facial</a></li>
+                    <li><a href="/productos/categoria/6" class="text-white text-decoration-none">Manos</a></li>
+                    <li><a href="/productos/categoria/7" class="text-white text-decoration-none">Pies</a></li>
+                    <li><a href="/productos/categoria/8" class="text-white text-decoration-none">Corporal</a></li>
+                    <li><a href="/productos/categoria/9" class="text-white text-decoration-none">Contra Caidas</a></li>                    
                 </ul>
             </div>
 
