--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,7 +14,7 @@
         </a>
         <!-- Íconos de Usuario -->
         <div class="d-flex align-items-center">
-          <a href="/favoritos">
+          <a href="/productos/favoritos">
             <i class="fas fa-heart header__icon me-3"></i>
           </a>
           <a href="/carrito-compra" class="position-relative me-3">
@@ -127,7 +127,7 @@
 
         <!-- Íconos de Usuario -->
         <div class="d-flex align-items-center">
-          <a href="/favoritos">
+          <a href="/productos/favoritos">
             <i class="fas fa-heart header__icon me-3"></i>
           </a>
           <a href="/carrito-compra" class="position-relative me-3">
