--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -18,8 +18,6 @@
 <!-- CartCount -->
 <script src="/js/functions/updateCartCount.js"></script>
 
-<!-- List -->
-<script src="/js/functions/list.js"></script>
+<!-- Favorites -->
+<script src="/js/functions/favorite.js"></script>
 
-<!-- Search -->
-<script src="/js/functions/search.js"></script>
